Fix mis-aligned hotkey suggestions.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -70,6 +70,7 @@ body {
   padding: 10px 10px;
   align-content: flex-start;
   align-self: flex-start;
+  line-height: 0;
   pointer-events: none;
   width: 100%;
 }
